# aicomrad-stt

./: CMakeLists.txt  main.cpp  whisper_service.service
include/: audio_processor.h  config.h  json_utils.h  whisper_engine.h
src/: audio_processor.cpp  config.cpp  json_utils.cpp  whisper_engine.cpp
